# mini-wms

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: Container.h  Conveyor.h  Forklift.h  IStorageSystem.h  Warehouse.h
source/: Container.cc  Conveyor.cc  Forklift.cc  Warehouse.cc  main.cc
tests/: CMakeLists.txt  test_warehouse.cc
